bugfix: flex overflow UI mobile.

--- a/styles/main.css
+++ b/styles/main.css
@@ -89,6 +89,7 @@ dialog::backdrop {
 }
 
 .flavor {
+    border: solid 0.0625rem #999;
 	display: flex;
 	flex-wrap: wrap;
 }
